# apgi-implementation

./: .coveragerc  .flake8  .gitignore  APGI-Specs.md  APGI.md  APGI_VALIDATION.md  IMPLEMENTATION_AUDIT.md  LICENSE  README.md  TEST-COVERAGE.md  TODO.md  VALIDATION_REPORT.md  bandit.yaml  config.py  delete_pycache.py  main.py  pipeline.py  pyproject.toml  pytest.ini
active_inference/: __init__.py  policy.py
analysis/: __init__.py  stability.py
core/: allostatic.py  circadian.py  compliance.py  config_schema.py  dynamics.py  ignition.py  logging_config.py  phi_transform.py  precision.py  preprocessing.py  sde.py  signal.py  somatic.py  thermodynamics.py  threshold.py  validation.py  zscoring.py
docs/: APGI-Full-Specs.md  APGI-Specs.md  APGI.md  API-REFERENCE.md  API_REFERENCE.md  DESIGN-CHOICES.md  DESIGN_CHOICES.md  HIERARCHICAL-GUIDE.md  HIERARCHICAL_GUIDE.md  PARAMETER-CONSTRAINTS.md  PARAMETER_CONSTRAINTS.md  SPECTRAL-VALIDATION.md  SPECTRAL_VALIDATION_GUIDE.md  TROUBLESHOOTING.md
energy/: bold_calibration.py  calibration_utils.py  thermodynamics.py
examples/: 01_basic_usage.py  02_advanced_features.py  03_observable_mapping.py  04_thermodynamics.py  05_bold_thermodynamics.py  05_reservoir_as_threshold.py  05_validation_e2e.py  06_hierarchical_system.py  07_hierarchical_system.py  07_spectral_validation.py  08_kuramoto_coupling.py  08_spectral_validation.py  09_kuramoto_coupling.py  10_validation_e2e.py  11_maturity_assessment.py  12_maturity_demo.py  13_validation_e2e.py  14_bold_calibration.py  15_hierarchy_power_spectrum.py
hierarchy/: coupling.py  multiscale.py  resonance.py
oscillation/: __init__.py  kuramoto.py  phase.py  threshold_modulation.py
reservoir/: liquid_network.py  liquid_state_machine.py
stats/: avalanche.py  hurst.py  maturity_assessment.py  spectral_extraction.py  spectral_model.py
tests/: __init__.py  conftest.py  test_active_inference.py  test_active_inference_policy_coverage.py  test_allostatic_coverage.py  test_analysis_stability.py  test_analysis_stability_coverage.py  test_analysis_stability_extended.py  test_bold_calibration.py  test_bold_coverage.py  test_calibration_utils_coverage.py  test_canonical_mode.py  test_compliance_coverage.py  test_config_schema_coverage.py  test_conftest_coverage.py  test_core_allostatic.py  test_core_compliance.py  test_core_config_schema.py  test_core_dynamics.py  test_core_ignition.py  test_core_precision.py  test_core_preprocessing.py  test_core_preprocessing_extended.py  (+84 more)
(+3 files in other folders)
