[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apgi"
version = "1.0.0"
description = "Allostatic Precision Gated Ignition - A neuroscience-inspired computational framework"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["neuroscience", "computational-model", "precision-weighting", "ignition"]
authors = [
    {name = "APGI Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
sci = [
    "scipy>=1.10.0",
]
reservoir = [
    "scipy>=1.10.0",
]
analysis = [
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
all = [
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
apgi = "main:main"

[project.urls]
Homepage = "https://github.com/apgi/apgi"
Documentation = "https://apgi.readthedocs.io"
Repository = "https://github.com/apgi/apgi"
Issues = "https://github.com/apgi/apgi/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "hierarchy*", "oscillation*", "reservoir*", "stats*", "validation*", "analysis*", "energy*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
exclude = ["tests/", "examples/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
